--- a/README.org
+++ b/README.org
@@ -23,7 +23,7 @@ Clones are a type of [[https://en.wikipedia.org/wiki/Transclusion][transclusion]
 
 My use case is that I maintain one org file with ongoing research. This file is full of well-written and researched academic work, half-thoughts, notes, links, etc. Sometimes I need to use that research in a paper I am writing. When I do so, I inevitably edit and expand (or contract) the work I have already done. I want this new work—even though it is being written in a different file—to be synced back to my master research file. Before now, there did not appear to be a good and simply way to do this. 
 
-I do not use =org-roam=, =org-brain=, or any other package involving the bespoke Zettlekasten note taking method. My brain is simple. I like outlines and only outlines. For me, anything beyond a simple outline results in diministed productivity. See below for links to other transclusion solutions.
+I do not use =org-roam=, =org-brain=, or any other package involving the Zettlekasten, or other, note taking method. My brain is simple. I like outlines and only outlines. For me, anything beyond a simple outline results in diministed productivity. See below for links to other transclusion solutions.
 
 * Terminology
 I use the following teminology in the package:
