--- a/README.org
+++ b/README.org
@@ -107,7 +107,7 @@ Insert screenshot here.
 * Known Bugs
 - [X] Error when putting the text properties on a body when the the last point of the body is the last point of the buffer. [Solved by converting the =let= in =org-clones--text-watcher= to a =when-let=.
 - [ ] Clone overlay icon disappears when killing and yanking a clone to a new location. [Can’t figure out how to solve this one simply. Perhaps ignore it.]
-- [ ] if a clone is folded when synced, the new body will not be hidden properly until the outline visibility is cycled
+- [X] if a clone is folded when synced, the new body will not be hidden properly until the outline visibility is cycled
 
 * Other transclusion efforts
 Here are other Emacs transclusion efforts (or discussions of such efforts):
